--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
+    "seed": "node ./models/seeds/expenseSeeder.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^4.0.2"
+    "express-handlebars": "^4.0.2",
+    "mongoose": "^7.4.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
