--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-handlebars": "^4.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^7.4.0"
   },
   "devDependencies": {
