--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-handlebars": "^4.0.2",
+    "express-session": "^1.17.3",
     "method-override": "^3.0.0",
-    "mongoose": "^7.4.0"
+    "mongoose": "^7.4.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.3.1"
